[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://scenes/Floor.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Wall.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Core.tscn" type="PackedScene" id=4]

[node name="Main" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Floor" parent="." index="0" instance=ExtResource( 2 )]

_sections_unfolded = [ "Transform" ]

[node name="Wall" parent="." index="1" instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -9.93871 )

[node name="Core" parent="." index="2" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.15429, 0 )

[node name="Camera" type="Camera" parent="." index="3"]

transform = Transform( 1, 0, 0, 0, 0.967835, -0.251587, 0, 0.251587, 0.967835, 0, 2.39406, 9.44476 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = false
fov = 70.0
size = 1.0
near = 0.05
far = 100.0
_sections_unfolded = [ "Transform" ]

[node name="DirectionalLight" type="DirectionalLight" parent="." index="4"]

transform = Transform( 0.939906, 0, -0.341434, 0.0835091, 0.969628, 0.229885, 0.331064, -0.244583, 0.911359, -7.20492, 2.95063, 0 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 1.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.1
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
directional_shadow_mode = 2
directional_shadow_split_1 = 0.1
directional_shadow_split_2 = 0.2
directional_shadow_split_3 = 0.5
directional_shadow_blend_splits = false
directional_shadow_normal_bias = 0.8
directional_shadow_bias_split_scale = 0.25
directional_shadow_depth_range = 0
directional_shadow_max_distance = 200.0
_sections_unfolded = [ "Shadow" ]

[node name="SpawnPoint" type="Position3D" parent="." index="5"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 18.3208, 0 )

[node name="Timer" type="Timer" parent="." index="6"]

process_mode = 0
wait_time = 0.7
one_shot = false
autostart = true

[node name="FPSLabel" type="Label" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1150.0
margin_top = 40.0
margin_right = 1190.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "FPS: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BallsLabel" type="Label" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1150.0
margin_top = 70.0
margin_right = 1197.0
margin_bottom = 84.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Balls: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SpeedLabel" type="Label" parent="." index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1150.0
margin_top = 130.0
margin_right = 1205.0
margin_bottom = 144.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Speed: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ScoreLabel" type="Label" parent="." index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 30.0
margin_top = 40.0
margin_right = 81.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Score: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TotalLabel" type="Label" parent="." index="11"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1150.0
margin_top = 100.0
margin_right = 1236.0
margin_bottom = 114.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Total Score: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HighestScoreLabel" type="Label" parent="." index="12"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 30.0
margin_top = 70.0
margin_right = 134.0
margin_bottom = 84.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Highest Score: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="timeout" from="Timer" to="." method="on_time_tick"]


